--- a/staffmeals.html
+++ b/staffmeals.html
@@ -155,6 +155,7 @@
         <option value="" disabled selected>Select your name</option>
         <option value="Savannah">Savannah</option>
         <option value="Munch">Munch</option>
+        <option value="Slade">Slade</option>
       </select>
     </div>
 
