--- a/register.html
+++ b/register.html
@@ -399,6 +399,10 @@
         <input type="search" id="searchBar" placeholder="Search menu items..." aria-label="Search menu items" />
       </div>
 
+      <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
+  Please note: We are only serving combo deals currently.
+</p>
+
       <div class="item-grid">
   <!-- Combo: Bleeder Box -->
   <div class="item-card" data-name="The Bleeder Box" data-price="1200" data-category="Combo Deals" data-image="assets/images/bleederbox.png">
