--- a/home.html
+++ b/home.html
@@ -258,6 +258,10 @@
       <header class="welcome">
         <h1>🍔 Welcome to Burger Shot!</h1>
         <p>Your quick overview & stats dashboard</p>
+
+        <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
+  Please report any issues with the website via emails.
+</p>
       </header>
 
       <section class="quick-stats" aria-label="Key statistics summary">
