--- a/loyalty.html
+++ b/loyalty.html
@@ -158,6 +158,10 @@
     <main class="main-content">
       <h1>🎁 Customers</h1>
 
+      <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
+  Right now, every 5th visit a customer will receive a free dessert - this will flag up on the order sheet. The reward will increase over time as we grow.
+</p>
+
       <div class="loyalty-list" id="loyaltyList">
         <!-- Customer cards will be injected here -->
       </div>
