--- a/market.html
+++ b/market.html
@@ -163,6 +163,11 @@
 
   <main>
     <h1>🏪 Market Run</h1>
+
+    <p style="font-weight:600; color:#c82333; margin-top:-1rem; margin-bottom:1.5rem;">
+    As of right now, only those with permission from a manager are able to carry out market runs.
+  </p>
+
     <table>
       <thead>
         <tr>
