--- a/staffmeals.html
+++ b/staffmeals.html
@@ -149,6 +149,10 @@
   <main>
     <h1>🍽️ Staff Meals</h1>
 
+      <p style="font-weight:600; color:#c82333; margin-top:-1rem; margin-bottom:1.5rem;">
+    Employees are entitled to 5 drinks and 5 food items per shift. Please make sure you log it here so that the inventory stays accurate.
+  </p>
+
     <div class="form-group">
       <label for="employeeSelect">Select Employee</label>
       <select id="employeeSelect" required>
