--- a/register.html
+++ b/register.html
@@ -400,7 +400,8 @@
       </div>
 
       <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
-  Please note: We are only serving combo deals currently.
+  Please note: We are only serving combo deals currently. <br><br>
+  Full customer name is not necessary, first name is acceptable. This is for future loyalty program plans and keeping track of orders.
 </p>
 
       <div class="item-grid">
