--- a/inventory.html
+++ b/inventory.html
@@ -231,7 +231,7 @@
     <h1>📦 Inventory</h1>
     <p style="font-weight:600; color:#c82333; margin-top:-1rem; margin-bottom:1.5rem;">
     This inventory page helps us to track ingredients without having to work it out manually from the fridge or warehouse. <br><br> 
-    Once an order, staff meal or market run is submitted, the inventory will update automatically. TEST
+    Once an order, staff meal or market run is submitted, the inventory will update automatically.
   </p>
     <div style="display: flex; gap: 20px; flex-wrap: wrap;">
   <div id="comboCounts" class="combo-box" style="flex: 1;"></div>
