updated or text

--- a/inventory.html
+++ b/inventory.html
@@ -438,7 +438,7 @@ function renderComboCounts(inventory) {
   container.innerHTML = `
     <h3>Combo Availability</h3>
     <p style="font-weight:600; color:#333;">
-      ${comboEntries.join(" <br>OR<br> ")}
+      ${comboEntries.join(" <br><br>  OR<br><br> ")}
     </p>
   `;
 }
