--- a/staffmeals.html
+++ b/staffmeals.html
@@ -160,6 +160,7 @@
         <option value="Savannah">Savannah</option>
         <option value="Munch">Munch</option>
         <option value="Slade">Slade</option>
+        <option value="Jack">Jack</option>
       </select>
     </div>
 
