added jack to register

--- a/register.html
+++ b/register.html
@@ -504,6 +504,7 @@
           <option value="Savannah">Savannah</option>
           <option value="Munch">Munch</option>
           <option value="Slade">Slade</option>
+          <option value="Jack">Jack</option>
         </select>
         <label for="customerName">Customer Name</label>
         <input type="text" id="customerName" list="customerSuggestions" placeholder="Enter customer name" required />
